giga super mega changes

--- a/src/index.css
+++ b/src/index.css
@@ -8,26 +8,78 @@
 /* *::selection {
   background-color: transparent;
 } */
+.sticky-btns {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  right: 3.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  gap: 1.25rem;
+  z-index: 100;
+}
+
+@keyframes pulse-purple{0%{-webkit-transform:scale(.95);transform:scale(.95);-webkit-box-shadow:0 0 0 0 rgba(99,82,205,.7);box-shadow:0 0 0 0 rgba(99,82,205,.7)}70%{-webkit-transform:scale(1.05);transform:scale(1.05);-webkit-box-shadow:0 0 0 10px rgba(0,0,0,0);box-shadow:0 0 0 10px rgba(0,0,0,0)}100%{-webkit-transform:scale(.95);transform:scale(.95);-webkit-box-shadow:0 0 0 0 rgba(0,0,0,0);box-shadow:0 0 0 0 rgba(0,0,0,0)}}
+
+.sticky-btns__item img, .sticky-btns__item svg {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
+.sticky-btns__item--blue {
+  background: #4c8ced;
+  -webkit-animation: pulse-purple 2s infinite;
+  animation: pulse-purple 2s infinite;
+}
+
+.sticky-btns__item {
+  display: block;
+  width: 4.5rem;
+  height: 4.5rem;
+  padding: 1.25rem;
+  border-radius: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-transition: .1s ease;
+  transition: .1s ease;
+  border: 1px solid transparent;
+  -webkit-box-shadow: 0 0 0 0 #000;
+  box-shadow: 0 0 0 0 #000;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+@media (max-width:767px) {
+  .sticky-btns__item {
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: 7px;
+  }
+  .sticky-btns {
+    right: 10px;
+  }
+}
 :root {
   --black: #141414;
   --orange: #f08200;
-}
-.flying_items {
-  position: fixed;
-  width: 80px;
-  right: 3vw;
-  top: 20vh;
-  gap: 30px;
-  z-index: 9999999;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: end;
-}
-@media (max-width: 500px) {
-  .flying_items {
-    top: 70vw;
-  }
+  --input_color:rgba(61,205,92,0.5);
 }
 @media (max-width: 500px) {
   .btn-2 {
@@ -74,30 +126,11 @@
   }
   
 }
-.flying_items img {
-  width: 80px;
-  object-fit: contain;
-  height: 15vw;
-}
 @media (max-width: 500px) {
-  .flying_items img {
-    width: 12vw;
-  }
   .swiper_item {
     height: 80vw !important;
   }
 }
-@keyframes tg-animation {
-  from {
-    opacity: 0.5;
-    transform: scale(2);
-  }
-  to {
-    opacity: 0;
-    transform: scale(2.2);
-  }
-}
-
 .spinner-wrap {
   position: relative;
 }
@@ -175,20 +208,20 @@
   background-size: cover;
 }
 .i-1 {
-  background-image: url("./images/swiper_1.jpeg");
+  background-image: url("./images/swiper_1-min.jpeg");
 }
 .i-2 {
-  background-image: url("./images/swiper_2.jpeg");
+  background-image: url("./images/swiper_2-min.jpeg");
 }
 .i-3 {
-  background-image: url("./images/swiper_3.jpeg");
+  background-image: url("./images/swiper_3-min.jpeg");
 }
 .i-4 {
-  background-image: url("./images/swiper_4.jpeg");
+  background-image: url("./images/swiper_4-min.jpeg");;
 }
 .i-5 {
   background-color: #1a4a7f;
-  background-image: url("./images/swiper_5.png");
+  background-image: url("./images/swiper_5-min.png");;
   background-size: contain;
   background-position: right;
 }
