--- a/src/pages/Section3/Section3.scss
+++ b/src/pages/Section3/Section3.scss
@@ -1,5 +1,6 @@
 .section3{
-  min-height: 800px;
+  min-height: 700px;
+  padding-bottom: 20px;
   .container{
     max-width: 1440px;
     margin: 0 auto;
