--- a/src/pages/Section5/Section5.scss
+++ b/src/pages/Section5/Section5.scss
@@ -1,7 +1,10 @@
 .section5{
   min-height: 1500px;
   .container{
-    max-width: 1440px;
+    button {
+      border:none;
+    }
+    max-width: calc(1440px - (165px + 165px));
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -10,9 +13,9 @@
     flex-direction: column;
     padding-top: 30px;
     .card1{
-      width: 90%;
+      width: 100%;
       height: 100%;
-      background-image: url("../../images/card1.svg");
+      background-image: url("../../images/card1.webp");
       background-repeat: no-repeat;
       display: flex;
       flex-direction: column;
@@ -55,7 +58,7 @@
       }
     }
     .card2{
-      width: 90%;
+      width: 100%;
       height: 100%;
       background-repeat: no-repeat;
       display: flex;
@@ -67,7 +70,7 @@
       padding-top: 30px;
       padding-bottom: 40px;
       gap: 15px;
-      background-image: url("../../images/card3.svg");
+      background-image: url("../../images/card3.webp");
       h1{
         font-weight: 500;
         font-size: 32px;
@@ -101,7 +104,7 @@
     .card3{
       padding-top: 30px;
       padding-bottom: 40px;
-      width: 90%;
+      width: 100%;
       height: 100%;
       background-repeat: no-repeat;
       display: flex;
@@ -112,7 +115,7 @@
       border-radius: 8px;
       gap: 15px;
       padding-bottom: 20px;
-      background-image: url("../../images/card2.svg");
+      background-image: url("../../images/card2.webp");
       h1{
         font-weight: 500;
         font-size: 32px;
