--- a/src/pages/Section7/Section7.scss
+++ b/src/pages/Section7/Section7.scss
@@ -19,7 +19,9 @@
       display: flex;
       width: 100%;
       gap: 40px;
-      flex-wrap: wrap;
+      @media (max-width:700px) {
+        flex-wrap: wrap;
+      }
         .left{
           display: flex;
           justify-content: center;
@@ -30,6 +32,9 @@
             max-width: 400px;
             display: flex;
             flex-direction: column;
+            @media (max-width:700px) {
+              max-width: 700px;
+            }
             h1{
               font-weight: 600;
               font-size: 40px;
